--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(135deg, #ffffff 0%, #8086d3 100%);
+    background: linear-gradient(135deg, #b4b4b4 0%, #727272 100%);
     min-height: 100vh;
     display: flex;
     align-items: center;
